--- a/app/page.module.css
+++ b/app/page.module.css
@@ -7,5 +7,12 @@
 }
 
 .loginWrapper {
-  border: 1px solid gray;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  border: 1px solid var(--dark-white);
+  min-width: 400px;
+  padding: 10px;
+  border-radius: 5px;
 }
